--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "seeker"]
 	path = seeker
 	url = git@github.com:efraimgentil/veritas-seeker.git
+[submodule "athena"]
+	path = athena
+	url = git@github.com:efraimgentil/veritas-athena.git
